--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -347,6 +347,19 @@ a {
   right: 5%;
 }
 
+.plan--popular .card__header {
+  position: relative;
+}
+
+.plan--popular .car__header::before {
+  content: url(../images/popular.svg);
+  width: 40px;
+  display: inline-block;
+  position: absolute;
+  top: -6;
+  right: 5%;
+}
+
 @media screen and (min-width: 1024px) {
   .plan__name {
     font-size: 1.4rem;
