Defining Hero Component

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -32,6 +32,7 @@ h2,
 h3 {
   color: var(--color-headings);
   margin-bottom: 1rem;
+  line-height: 1.1;
 }
 
 h1 {
@@ -115,7 +116,7 @@ a {
   color: #fff;
 }
 
-.badge--smal {
+.badge--small {
   font-size: 1.6rem;
 }
 
@@ -142,18 +143,18 @@ a {
   margin-right: 2rem;
 }
 
-.list--tick {
+.list--thick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
 }
 
-.list--tick .list__item {
+.list--thick .list__item {
   padding-left: 0.5rem;
   margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 1024px) {
-  .list--tick .list__item {
+  .list--thick .list__item {
     padding-left: 0;
   }
 }
@@ -690,5 +691,33 @@ a {
 
   .nav__item {
     border: 0;
+  }
+}
+
+/* Tagline */
+
+.hero {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+.hero__tagline {
+  font-size: 2rem;
+  color: #b9c3cf;
+  letter-spacing: 1px;
+  margin: 2rem 0 5rem;
+}
+
+.hero__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 0;
+  }
+
+  .hero__content {
+    text-align: left;
+    align-self: center;
   }
 }
