--- a/Components/lists.html
+++ b/Components/lists.html
@@ -1,4 +1,4 @@
-<ul class="list list--tick">
+<ul class="list list--thick">
   <li class="list__item">Item</li>
   <li class="list__item">Item</li>
   <li class="list__item">Item</li>
